--- a/public/index.html
+++ b/public/index.html
@@ -44,5 +44,14 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 </body>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-220491373-1">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'UA-220491373-1');
+</script>
 
 </html>
