--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Obten tu credito rapido y facil" />
+  <meta name="keywords" content="checar buro de credito,
+  consultar buro de credito,
+  mi buro de credito,
+  checar mi buro de credito,
+  revisar buro de credito,
+  condusef buro de credito,
+  buró de crédito coppel,
+  buro de credito mexico,
+  buro de credito en linea,
+  consultar mi buro de credito,
+  checar si estoy en buro de credito,
+  www buro de credito,
+  revisar mi buro de credito,
+  mi buro,
+  checar buro,
+  mi buro de credito especial,
+  historial de buro de credito,
+  sacar buro de credito,
+  saber si estoy en buro de credito,
+  coppel buro de credito,
+  checar historial crediticio,
+  ver buro de credito">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
