--- a/public/index.html
+++ b/public/index.html
@@ -66,14 +66,13 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 </body>
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-220491373-1">
-</script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-056PF1PDDE"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
-  function gtag() { dataLayer.push(arguments); }
+  function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-220491373-1');
+  gtag('config', 'G-056PF1PDDE');
 </script>
 
 </html>
