--- a/public/index.html
+++ b/public/index.html
@@ -66,13 +66,15 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 </body>
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-056PF1PDDE"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
+  
   gtag('config', 'G-056PF1PDDE');
 </script>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </html>
